[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rocketleague"
version = "0.0.1"
authors = [
    { name = "Tanner B. Corcoran", email = "tannerbcorcoran@gmail.com" },
]
description = "A soon-to-be API wrapper for Rocket League's public API (soon tm)."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tanrbobanr/rocketleague"